See if the spacing error is fixed

--- a/css/screen.css
+++ b/css/screen.css
@@ -204,19 +204,19 @@ label {
   display: inline;
   font-family: 'Yeseva One', cursive;
   color: #F8F8FF;
-  font-size: 24px;
+  font-size: 30px;
   padding: 30px 0 30px 0;
 }
 
 main{
   background-color: #696969;
-  height: 85%;
+  height: 900px;
   align-content: center;
 }
 
 h1{
-  padding: 30px 0;
-  font-size: 40px;
+  padding: 20px 0;
+  font-size: 50px;
   line-height: 45px;
   color: #F8F8FF;
   font-family: 'Shadows Into Light', cursive;
@@ -225,28 +225,31 @@ h1{
 p{
   font-size: 30px;
   line-height: 40px;
-  padding: 36.674px;
+  padding-top: 36.674px;
   font-family: 'Dosis', sans-serif;
 }
 
 input{
+  background-color: #DCDCDC;
+  color: #696969;
+  box-sizing: border-box;
+  border: none;
+  font-family: 'Yeseva One', cursive;
+}
+input[type=email]{
   font-size: 30px;
   line-height: 40px;
   padding-bottom: 10px;
   margin-bottom: 10px;
-  background-color: #DCDCDC;
-  color: #696969;
-  box-sizing: border-box;
   width: 50%;
-  font-family: 'Yeseva One', cursive;
 }
-
 input[type=submit]{
   border-radius: 5%;
   font-size: 36.674px;
   background: #C0C0C0;
   color: #000000;
   width: 50%;
+  margin-top: 20px;
 }
 
 input[type=checkbox]{
@@ -254,10 +257,11 @@ input[type=checkbox]{
   margin-left: 30%;
 }
 
-#age-verification{
-  box-sizing: border-box;
-  margin-left: 3%
+#input-email{
+  margin-bottom: 20px;
 }
+
+#
 @media screen and (min-width: 768px) {
   html{
     font-size: 225%;
